# karaoke-desktop

./: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
public/: X55087G2.MID
src/: App.css  main.tsx
src-tauri/: Cargo.toml  hoge.mid  tauri.conf.json
src-tauri/midly_extension/: Cargo.toml
src-tauri/midly_extension/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  smf.rs  xf_parser.rs
src/components/: Card.tsx  RecentlyPlayedCard.tsx  Sidebar.tsx
src/hooks/: useWindowSize.ts
src/pages/: Home.tsx  Play.tsx  Tauri.tsx
